# Research

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PaperResearch Agent 项目规划.docx  README.md  alembic.ini  docker-compose.yml  pyproject.toml
artifacts/: deep-research-synthesize-smoke-v1.json  deepseek-provider-smoke-v1.json  demo-research-report-deepseek-v1.md  demo-research-report-production-v1.md  demo-research-report-v1.md  demo-research-trace-deepseek-v1.json  demo-trace-production-v1.json  demo-trace-v1.json  full-qa-production-trace-v1.json  live-model-smoke-test-v1.json  q017-live-retry-result-v1.json  q019-live-retry-result-v1.json  siliconflow-structured-output-compatibility-v1.json  soak-test-portfolio-v1.json  soak-test-v1.json  stability-results-v1.json
deploy/: nginx.conf
docs/: api-examples.md  architecture.md  artifact-publication-audit-v1.md  backup-restore-audit.md  citation-calibration-v1-guide.md  citation-failure-q033-v1.md  citation-failure-q044-v1.md  citation-human-audit-guide-v1.md  citation-human-audit-summary-v1.md  citation-recall-gold-relation-audit-v1.md  citation-recall-metric-v2.md  citation-recall-v2-comparison.md  claim-cardinality-audit-v1.md  claim-evidence-gold-dev-v1-freeze.md  claim-evidence-gold-dev-v1-summary.md  claim-evidence-gold-dev-v1.md  claim-evidence-gold-pilot-v1.md  claim-evidence-gold-v1-guide.md  claim-first-failure-audit-v1.md  claim-gold-citation-comparison-v1.md  claim-gold-review-guide-v1.md  claim-units-v1.md  content-claims-audit-v1.md  (+257 more)
(+735 files in other folders)
