[project]
name = "paper-research-agent"
version = "1.0.0+portfolio"
description = "Paper RAG and deep research assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "langgraph>=1.0,<2",
  "langgraph-checkpoint-postgres>=3.0,<4",
  "bleach>=6,<7",
  "mistune>=3,<4",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.6,<3",
  "pymupdf>=1.25,<2",
  "python-multipart>=0.0.20,<1",
  "qdrant-client>=1.12,<2",
  "redis>=5.2,<6",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.8,<1",
]
parsing = [
  "docling>=2.60,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_research"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
